--- a/Group_C_D&D - encounter building.html
+++ b/Group_C_D&D - encounter building.html
@@ -258,99 +258,95 @@
                 </figure>
             </div>
         </div>
+	</section>
+	<!-- ============================================================================================================================== -->
+	<!-- =============================================== Keeping it interesting ======================================================= -->
+	<!-- ============================================================================================================================== -->
+	<section class="main-section" id="Keeping it interesting">
 
-        <!-- ============================================================================================================================== -->
-        <!-- =============================================== Keeping it interesting ======================================================= -->
-        <!-- ============================================================================================================================== -->
-        <section class="main-section" id="Keeping it interesting">
+		<!--main-section-start-->
+		<div class="container">
+			<h2>Keeping it interesting</h2>
+			<h6>Encounters can get dry if you don't spice them up</h6>
 
-            <!--main-section-start-->
-            <div class="container">
-                <h2>Keeping it interesting</h2>
-                <h6>Encounters can get dry if you don't spice them up</h6>
+			<!--image-->
+			<figure class="col-lg-7 col-sm-6 col-lg-pull-1 text-right wow fadeInUp delay-02s">
+				<img src="img/interesting encounter.jpg" alt="cr tables Image">
+			</figure>
 
-                <!--image-->
-                <figure class="col-lg-7 col-sm-6 col-lg-pull-1 text-right wow fadeInUp delay-02s">
-                    <img src="img/interesting encounter.jpg" alt="cr tables Image">
-                </figure>
+			<div align="center" class="row">
+				<br>
+				<br>
+				<!--Fadein-->
+				<div class="col-lg-4 col-sm-2 col-lg-pull-1 wow fadeInLeft delay-05s">
+					<!--Interesting monsters-->
+					<div class="service-list">
+						<div class="service-list-col1">
+						</div>
+						<i></i>
+						<div class="service-list-col3">
+							<h3><b>Interesting monsters</b></h3>
+							<p>
+								When it can be relevant to the story, choosing
+								an interesting monster can spice up an encounter. A
+								monster can be interesting in appearance and 
+								behavior or simply in it's abilities and how it
+								will challenge the players.
+							</p>
+						</div>
+					</div>
+				</div>
+				<br>
+				<br>
+				<br>
+				<br>
+				<!--Fadein-->
+				<div class="col-lg-4 col-sm-2 col-lg-pull-1 wow fadeInLeft delay-05s">
+					<!--Interesting environments-->
+					<div class="service-list">
+						<div class="service-list-col1">
+						</div>
+						<i></i>
+						<div class="service-list-col4">
+							<h3><b>Interesting environments</b></h3>
+							<p>
+								Just like how the monster can keep an encounter fresh, 
+								the environment can be an effective means as well. The 
+								appearance of the environment that your encounter is in
+								can add to a narrative, such as a throne room or on the 
+								edge of a cliff. Interactions with the environment can
+								also add to the encounter. Having still water that makes 
+								it more difficult for the party to move in or possibly fighting on 
+								unsturdy ground are different ways to help keep players on the edge
+								of their seats.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section><!--main-section-end-->
+	
+	<!-- ============================================================================================================================== -->
+	<!-- ====================================================== FOOTER SECTION ======================================================== -->
+	<!-- ============================================================================================================================== -->
 
-                <div align="center" class="row">
-                    <br>
-                    <br>
-                    <!--Fadein-->
-                    <div class="col-lg-4 col-sm-2 col-lg-pull-1 wow fadeInLeft delay-05s">
-                        <!--Interesting monsters-->
-                        <div class="service-list">
-                            <div class="service-list-col1">
-                            </div>
-                            <i></i>
-                            <div class="service-list-col3">
-                                <h3><b>Interesting monsters</b></h3>
-                                <p>
-                                    When it can be relevant to the story, choosing
-                                    an interesting monster can spice up an encounter. A
-                                    monster can be interesting in appearance and 
-                                    behavior or simply in it's abilities and how it
-                                    will challenge the players.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <!--Fadein-->
-                    <div class="col-lg-4 col-sm-2 col-lg-pull-1 wow fadeInLeft delay-05s">
-                        <!--Interesting environments-->
-                        <div class="service-list">
-                            <div class="service-list-col1">
-                            </div>
-                            <i></i>
-                            <div class="service-list-col4">
-                                <h3><b>Interesting environments</b></h3>
-                                <p>
-                                    Just like how the monster can keep an encounter fresh, 
-                                    the environment can be an effective means as well. The 
-                                    appearance of the environment that your encounter is in
-                                    can add to a narrative, such as a throne room or on the 
-                                    edge of a cliff. Interactions with the environment can
-                                    also add to the encounter. Having still water that makes 
-                                    it more difficult for the party to move in or possibly fighting on 
-                                    unsturdy ground are different ways to help keep players on the edge
-                                    of their seats.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                </div>
-            </div>
-
-        </section><!--main-section-end-->
-        <!-- ============================================================================================================================== -->
-        <!-- ====================================================== FOOTER SECTION ======================================================== -->
-        <!-- ============================================================================================================================== -->
-
-<footer class="footer">
-    <div class="container">
-        <span class="copyright">&copy; Group C D&D - All Rights Reserved</span><br>
-        <div class="credits">
-            <!-- 
-                All the links in the footer should remain intact. 
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
-            -->
-            Website design by<a href="Group_C_D&D - About.html"> CIS-273 - Group C</a><br><br>
-			
-			SPECIAL NOTE: THIS WEBSITE IS FOR A SCHOOL PROJECT AND WILL NOT REMAIN ACTIVE AFTER 05/15/2020
-        </div>
-    </div>
-</footer>
+	<footer class="footer">
+		<div class="container">
+			<span class="copyright">&copy; Group C D&D - All Rights Reserved</span><br>
+			<div class="credits">
+				<!-- 
+					All the links in the footer should remain intact. 
+					You can delete the links only if you purchased the pro version.
+					Licensing information: https://bootstrapmade.com/license/
+					Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
+				-->
+				Website design by<a href="Group_C_D&D - About.html"> CIS-273 - Group C</a><br><br>
+				
+				SPECIAL NOTE: THIS WEBSITE IS FOR A SCHOOL PROJECT AND WILL NOT REMAIN ACTIVE AFTER 05/15/2020
+			</div>
+		</div>
+	</footer>
 
 
         <script type="text/javascript">
