--- a/Group_C_D&D.html
+++ b/Group_C_D&D.html
@@ -122,7 +122,7 @@
 				<p>General tips to Encounter Building!</p>
 			</div>
 			<div class=" Portfolio-box world">
-				<a href="#World"><img src="img/worldbuilding2.jpg" alt=""></a><br><br>
+				<a href="#World"><img src="img/worldbuilding2.jpg" alt=""></a><br>
 				<h3>World Building</h3>
 				<p>General tips to World Building!</p>
 			</div>
