--- a/Group_C_D&D - Kingdom.html
+++ b/Group_C_D&D - Kingdom.html
@@ -88,7 +88,9 @@
     </div>
 </nav><!--main-nav-end-->
 
- <img src="img/Pantheon.jpg" alt="Creator Image">
+
+<img src="img/Background2.jpg" alt="Creator Image">
+
 
 <!-- ============================================================================================================================== -->
 <!-- ========================================================= Pantheon SECTION ======================================================= -->
@@ -96,11 +98,15 @@
 
 <section class="main-section padding" id="Menu"><center><!--main-section-start-->
 	<div class="container">
-    	<h2>Making a Pantheon</h2>
-		<h6><center>Be The God Maker...</h6>
+    	<h2>Making a Kingdom</h2>
+		<h6><center>Choose the Kingdom you would like to build...</h6>
 		<h6> Article made by Cameron DeGeorge </h6>
-		<p> Your Pantheon is Your Own. Your own Goddesses, Gods, Titans, Demi-Gods and So on. Keep in limited. Do not have 50 gods, well, you could, just not ideal for you or the player. 10-25 should be fine.
-Naming them is simple: Take the core aspect or aspects of your God/Goddess and put them into Google Translate and form a work out of it.  Let’s use The God of Darkness, Nightmare, and Death. If you pop this into Google Translate and set the output language to Latin, you come out with this: deus mortis, tenebris, et sequuntur somnia. Now That is a lot, let’s break it down into the pure core aspects. If you just the three main words, Darkness, Nightmares, and Death you get this: mortem, tenebris, sequuntur somnia. Now when I see this, I like to think, what can I do to forge a name. I split the words. Mor-tene-nia making Mortenenia which sounds like more of a Goddess name, but we are making a God, we need something more menacing.  Now I see this Mor-tenebris, Mortenebris sounds good. The key to this is, you have to pick what sounds good, rolls off the tongue, easy to remember. Then alternate from God, Goddess, God, Goddess, until you like the list you make.
+		<p> Start with a Kingdom. You do not need to plan a whole world from the start. You can start with One Kingdom. Think about what the kingdom is known for? What ideals do they hold? How does the government function? Have to keep it simple 3-4 sentences or it is too complicated. Naming it like your deities, out of it’s core aspect(s) would be a good start
+ Towns/Capital
+I wouldn’t start with one town, give yourself a broad spectrum of towns for your players to travel to. You can all them whatever you want, even just use Google Translate and call them all town. Your players will be none the wiser. However, if you are that one person who doesn’t like fooling your players, you can do what you did for the deities and translate them based on the core aspects. Such as for the capital of my Kingdom of Hikari, the capital is called Hikari. They are both called this for being a kingdom and a capital that worships the Gods/Goddesses of Light.
+Building Your World
+If you just do this for the next few kingdoms. But wait til your players get there or wanna explore more. Do not rush it. Take your time to make the rest of the world.
+</p>
 </p>
     </div>
 	
