--- a/Group_C_D&D - Multiverse.html
+++ b/Group_C_D&D - Multiverse.html
@@ -89,10 +89,7 @@
 </nav><!--main-nav-end-->
 
 
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+<img src="img/Multiverse.jpg" alt="Creator Image">
 
 
 <!-- ============================================================================================================================== -->
@@ -114,10 +111,7 @@ Factions of the Multiverse are groups of people who travel the multiverse. I hav
 	
 </section><!--main-section-end-->
 
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
-<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+
 
 
 
