added and linked tertiary pages
created and linked more character tertiary pages

--- a/Group_C_D&D - charactercreation.html
+++ b/Group_C_D&D - charactercreation.html
@@ -282,7 +282,9 @@
                     <!--image-->
                     <figure class=" col-lg-14 col-lg-pull-1 col-sm-6  text-right wow fadeInUp delay-02s">
                         <br>
-                        <img src="img/races.jpg" alt="Races Image">
+                        <a href="Group_C_D&D -character creation_racesandclasses.html">
+                            <img src="img/races.jpg" alt="Races Image">
+                        </a>
                     </figure>
                 </div>
                 <!--Fadein-->
@@ -432,9 +434,11 @@
             <h6>Now we're going to determine the ability scores and calculate the modifiers and proficiencies</h6>
 
             <!--image-->
-			<figure  class="col-lg-4 col-sm-6  text-right wow fadeInUp delay-02s">
-				<img src="img/ability scores.jpg" alt="Ability scores Image">
-			</figure>
+            <figure class="col-lg-4 col-sm-6  text-right wow fadeInUp delay-02s">
+                <a href="Group_C_D&D - character creation_abilityscores.html">
+                    <img src="img/ability scores.jpg" alt="Ability scores Image">
+                </a>
+            </figure>
 
             <div align="center" class="row">
                 <br>
@@ -554,7 +558,9 @@
                 </div>
                 <!--image-->
                 <figure class="col-lg-4 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="img/character background.jpg" alt="character background Image">
+                    <a href="Group_C_D&D - character creation_characterdetails.html">
+                        <img src="img/character background.jpg" alt="character background Image">
+                    </a>
                 </figure>
             </div>
         </div>
