--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -76,7 +76,7 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
-			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/menu2.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
 			<li><a href="Group_C_D&D - charactercreation.html">Character Building</a></li>
@@ -121,7 +121,7 @@ SECTION BELOW AND PASTE IT FURTHER DOWN AND ALTER THE 'ID' IN THE TOP LEVEL 'SEC
                 	<h3>Multiverse</h3>
                     <p>General Instructions on Multiverse Creation!</p>
                 </div>
-                <div class=" Portfolio-box Kingdom">
+                <div class=" Portfolio-box1 Kingdom">
                 	<a href="#Kingdom"><img src="img/Background2.jpg" alt="Kingdom"></a>
                 	<h3>Kingdom Creation</h3>
                     <p>General Instructions on how to create a Kingdom!</p>
