--- a/Group_C_D&D - charactercreation.html
+++ b/Group_C_D&D - charactercreation.html
@@ -78,7 +78,7 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
-			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/menu2.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
 			<li><a href="Group_C_D&D - charactercreation.html">Character Building</a></li>
@@ -129,37 +129,37 @@
 			</div> 
 		</div>
 		<div class="portfolioContainer wow fadeInUp delay-04s">
-					<div class="Portfolio-box RaceClass">
+					<div class="Portfolio-box1 RaceClass">
 						<a href="#RaceClass"><img src="img/races icon.jpg" alt=""></a>
 						<h3>Race | Class</h3>
 						<p>Examples for choosing Race | Class</p>
 					</div>
-					<div class="Portfolio-box AbilityScoresandSuch">
+					<div class="Portfolio-box1 AbilityScoresandSuch">
 						<a href="#AbilityScoresandSuch"><img src="img/ability scores icon.jpg" alt=""></a>
 						<h3>Ability | Scores & Such</h3>
 						<p>General Instructions on Abilities | Scores & Such</p>
 					</div>
-					<div class="Portfolio-box BackgroundandDetails">
+					<div class="Portfolio-box1 BackgroundandDetails">
 						<a href="#BackgroundandDetails"><img src="img/character background icon.jpg" alt=""></a>
 						<h3>Background & Details</h3>
 						<p>General Instructions on Background & Character Details</p>
 					</div>
-					<div class="Portfolio-box Equipment">
+					<div class="Portfolio-box1 Equipment">
 						<a href="#Equipment"><img src="img/armory icon.jpg" alt=""></a>
 						<h3>Equipment</h3>
 						<p>Instructions on choosing Equipment</p>
 					</div>
-					<div class="Portfolio-box Leveling">
+					<div class="Portfolio-box1 Leveling">
 						<a href="#Leveling"><img src="img/powering up icon.jpg" alt=""></a>
 						<h3>Leveling</h3>
 						<p>General Instructions on Leveling</p>
 					</div>
-					<div class="Portfolio-box CharacterSheets">
+					<div class="Portfolio-box1 CharacterSheets">
 						<a href="#CharacterSheets"><img src="img/character sheets icon.jpg" alt=""></a>
 						<h3>Character Sheets</h3>
 						<p>Information on Character Sheets</p>
 					</div>
-					<div class="Portfolio-box carousel">
+					<div class="Portfolio-box1 carousel">
 						<a href="#carousel"><img src="img/barb sheet.jpg" alt=""></a>
 						<h3>Possible Characters</h3>
 						<p>Carousel of possible characters</p>
