--- a/Group_C_D&D - encounter building.html
+++ b/Group_C_D&D - encounter building.html
@@ -73,7 +73,7 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
-			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/menu2.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
 			<li><a href="Group_C_D&D - charactercreation.html">Character Building</a></li>
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="portfolioContainer wow fadeInUp delay-04s">
-                <div class="Portfolio-box Pantheon">
+                <div class="Portfolio-box1 Pantheon">
                     <a href="#Pantheon"><img src="img/cr tables.jpg" alt="Pantheon Creation"></a>
                     <h3>Challenge Rating</h3>
                     <p>Challenge ratings and characters</p>
