--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -113,23 +113,23 @@
 	</div>
 <nav>
     <div class="portfolioContainer wow fadeInUp delay-04s">
-		<div class="Portfolio-box character">
-			<a href="#Character"><img src="img/iconic1.ico" alt=""></a>
+		<div class="Portfolio-box3 character">
+			<a href="#Character"><img src="img/pm2.jpg" alt=""></a><br><br>
 			<h3>Cayce Whitcomb</h3>
 			<p>Learn more about Cayce!</p>
 		</div>
-		<div class="Portfolio-box monster">
-			<a href="#Monster"><img src="img/icon2.ico" alt=""></a>
+		<div class="Portfolio-box2 monster">
+			<a href="#Monster"><img src="img/developer2.jpg" alt="Content Developer"></a>
 			<h3>Bill Cook</h3>
 			<p>Learn more about Bill!</p>
 		</div>
-		<div class=" Portfolio-box world">
-			<a href="#World"><img src="img/icon7.ico" alt=""></a>
+		<div class=" Portfolio-box2 world">
+			<a href="#World"><img src="img/developer2.jpg" alt="Content Developer"></a>
 			<h3>Cameron DeGeorge</h3>
 			<p>Learn more about Cameron!</p>
 		</div>
-		<div class=" Portfolio-box about">
-			<a href="#About"><img src="img/icon6.ico" alt=""></a>
+		<div class=" Portfolio-box2 about">
+			<a href="#About"><img src="img/developer2.jpg" alt="Content Developer"></a>
 			<h3>Floyd Jackson</h3>
 			<p>Learn more about Floyd!</p>
 		</div>
