--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -287,7 +287,7 @@
 				
 				
 		    <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<a><img src="img/creator.jpg" alt="Creator Image"></a>
+            	<a><img src="img/Cameron.jpg" alt="Creator Image"></a>
             </figure>
 	</div>
 </section><!--main-section-end-->
