--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -174,7 +174,7 @@ TO MAINTAIN CONSISTANCY -->
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<img src="img/Pantheon.jpg" alt="Creator Image">
+            	<a href="Group_C_D&D - Pantheon.html"><img src="img/Pantheon.jpg" alt="Creator Image"> </a>
             </figure>
         
         </div>
@@ -213,7 +213,7 @@ TO MAINTAIN CONSISTANCY -->
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<img src="img/creator.jpg" alt="Creator Image">
+				<a href="Group_C_D&D - Multiverse.html">	<img src="img/creator.jpg" alt="Creator Image"></a>
             </figure>
         
         </div>
@@ -232,7 +232,7 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
 		<br>
         <div class="row">
             <figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-            	<img src="img/Background2.jpg" alt="World Image">
+            	<a href="Group_C_D&D - Kingdom.html"><img src="img/Background2.jpg" alt="World Image"></a>
             </figure>
         	<div class="col-lg-7 col-sm-8 featured-work">
             	<div class="service-list">
