finishing character creation
put together the last 3 tertiary pages: leveling, character sheets, and the example characters. Also fiddled with download links for the blank and filled out character sheets and the ability to click on the characters for an expanded view. Additionally changed the character image on the home page to remove the learn more tag. If anyone knows how to do a close button for the image views I have set up that would be the last thing I'd like to add if anything.

--- a/Group_C_D&D - character creation_equipment.html
+++ b/Group_C_D&D - character creation_equipment.html
@@ -299,7 +299,7 @@
     <!-- ============================================================================================================================== -->
     <!-- ============================================================ Back to link ==================================================== -->
     <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Equipment and stats">
+    <section class="main-section" id="back to">
 
         <!--main-section-start-->
         <div class="container">
