--- a/Group_C_D&D.html
+++ b/Group_C_D&D.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <!-- =======================================================================
 ============================================================================
@@ -202,7 +202,7 @@
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<a href="Group_C_D&D - charactercreation.html"><img src="img/armory.jpg" alt="Character Icon"></a>
+            	<a href="Group_C_D&D - charactercreation.html"><img src="img/armory source.jpg" alt="Character Icon"></a>
             </figure>
         
         </div>
