--- a/Group_C_D&D - character creation_charactersheets.html
+++ b/Group_C_D&D - character creation_charactersheets.html
@@ -14,7 +14,7 @@
 
 
     DATE			USER				DESCRIPTION OF CHANGE
-    4/24/2020    William Cook			Initial implementation
+    4/30/2020    William Cook			Initial implementation
 ============================================================================
 ======================================================================== -->
 
@@ -92,187 +92,76 @@
     <section class="main-section paddind" id="Intro">
         <!--main-section-start-->
         <div class="container">
-            <h2>Ability Scores and such</h2><br />
-            <h6>Here's a breakdown on Ability Scores, Modifiers, and Proficiencies</h6>
+            <h2>Character Sheets</h2><br />
+            <h6>Here's a breakdown on character sheets</h6>
         </div>
     </section>
     <!-- ============================================================================================================================== -->
-    <!-- ===================================================== Ability Scores ========================================================= -->
+    <!-- ================================================= What's a character sheet =================================================== -->
     <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Ability Scores">
+    <section class="main-section" id="What's a character sheet">
 
         <!--main-section-start-->
         <div class="container">
-            <h2>Ability Scores</h2>
-            <h6>Here's a breakdown of the ability scores</h6>
-
-            <center>
-                <p><b>This table shows what the ability scores do</b></p>
-            </center>
-            <br>
-            <br>
+            <h2>What a character sheet is</h2>
+            <h6>Here's an introduction to character sheets</h6>
 
             <!--image-->
             <figure class="col-lg-4 col-sm-6 col-lg-push-1 text-right wow fadeInUp delay-02s">
                 <br />
-                <br />
-                <br />
-                <img src="img/ability scores table.jpg" alt="ability scores Image">
+                <img src="img/barbarian sheet.jpg" alt="character sheet Image">
             </figure>
 
             <!--Fadein-->
             <div class="col-lg-4 col-sm-2 col-lg-push-1 wow fadeInLeft delay-05s">
-                <!--Determining your scores-->
+                <!--Visualizing your character-->
                 <div class="service-list">
                     <div class="service-list-col1">
                     </div>
                     <i></i>
                     <div class="service-list-col3">
-                        <h3><b>Determining your scores</b></h3>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <h3><b>Visualizing your character</b></h3>
                         <p>
-                            When building your character, you'll have to
-                            determine your scores before you assign them.
-                            Traditionally you'll roll 4d6 and discard the
-                            lowest die six times and assign the scores as
-                            you prefer. There's also other methods like
-                            point buy or assigning predetermined scores
-                            depending on what your playgroup prefers.
+                            Character sheets display all of your
+                            character's skills, saves, equipment,
+                            features, and any other information
+                            that you need for quick reference. The
+                            character sheet neatly organizes all
+                            of the information of your character for
+                            you so that this information is easy to
+                            find. Here's a link for a character
+                            sheet for you to edit and print or print
+                            and fill out.
+                            <a href="img/DnD_5E_CharacterSheet - Form Fillable.pdf" download>Click here</a>
                         </p>
                     </div>
                 </div>
-                <!--Assigning your scores...-->
+                <!--Constantly changing-->
                 <div class="service-list">
                     <div class="service-list-col1">
                     </div>
                     <i></i>
                     <div class="service-list-col4">
-                        <h3><b>Assigning your scores</b></h3>
+                        <h3><b>Constantly changing</b></h3>
                         <p>
-                            Once you have your six scores calculated
-                            you'll need to decide where you want to
-                            put them. Each class relies on different
-                            skills to be successful. Your character
-                            might want more strength or dexterity
-                            for their physical attacks or more
-                            intelligence, charisma, or wisdom for their
-                            magical attacks,or even more constitution
-                            to take more damage themselves.
-
+                            As long as you use pencil or edit
+                            your character sheet in a PDF you
+                            can always adjust it as you level
+                            up or find new equipment to carry.
+                            Character sheets are easy to add to
+                            and maintain all of the information
+                            necessary to play just as you can
+                            see in the example.
                         </p>
                     </div>
                 </div>
 
             </div>
 
-        </div>
-
-    </section><!--main-section-end-->
-    <!-- ============================================================================================================================== -->
-    <!-- ======================================================= Modifiers ============================================================ -->
-    <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Modifiers">
-        <!--main-section-start-->
-        <div class="container">
-            <h2>Modifiers</h2>
-            <h6>More information on modifiers</h6>
-
-            <div class="row">
-                <!--Fadein-->
-                <div class="col-lg-7 col-sm-6 col-lg-push-1 wow fadeInRight delay-05s">
-                    <div class="service-list">
-                        <!--What they are-->
-                        <div class="service-list-col1">
-                        </div>
-                        <i></i>
-                        <div class="service-list-col3">
-                            <br>
-                            <br>
-                            <h3><b>What they are</b></h3>
-                            <p>
-                                Modifiers are derivied from ability scores.
-                                They are a representation of how that
-                                character performs with that particular ability
-                                with a modifier of 0 being the normal average.
-                                You can consult the table to help you find
-                                the modifiers for each skill of your character.
-                            </p>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-                    <!--What they do-->
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                        </div>
-                        <i></i>
-                        <div class="service-list-col4">
-                            <h3><b>What they do</b></h3>
-                            <p>
-                                Each of your character's skills are affected
-                                by the modifier attributed to them.
-                                Your modifiers are also used to help with your character's
-                                saves. Additionally, modifiers are used for attacks
-                                both physical and magical to help them hit or do damage.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!--image-->
-                <figure class="col-lg-3 col-sm-3  text-right wow fadeInUp delay-02s">
-                    <img src="img/modifier table.jpg" alt="modifier Image">
-                </figure>
-            </div>
-        </div>
-    </section><!--main-section-End-->
-    <!-- ============================================================================================================================== -->
-    <!-- ===================================================== Proficiencies ========================================================== -->
-    <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Proficiencies">
-
-        <!--main-section-start-->
-        <div class="container">
-            <h2>Proficiencies</h2>
-            <h6>Here's a breakdown of proficiencies</h6>
-
-            <div align="center" class="row">
-                <!--Fadein-->
-                <div class="wow fadeInLeft delay-05s">
-                    <!--Proficiency bonus-->
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                        </div>
-                        <i></i>
-                        <div class="service-list-col3">
-                            <h3><b>Proficiency Bonus</b></h3>
-                            <p>
-                                The proficiency bonus represents your 
-                                character's experience and is determined
-                                by your character's level. Your proficiency
-                                bonus is added to skills, saves, and attacks
-                                that your character is proficient in.
-                            </p>
-                        </div>
-                    </div>
-                    <!--Determining Proficiency-->
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                        </div>
-                        <i></i>
-                        <div class="service-list-col4">
-                            <h3><b>Determining Proficiency</b></h3>
-                            <p>
-                                While your proficiency bonus is determined
-                                by level, what your character is proficient 
-                                in is determined by your class. Your class
-                                will tell you what saves, skills, and attacks
-                                that your character is proficient in and 
-                                you'll add your bonus to them.
-                            </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
         </div>
 
     </section><!--main-section-end-->
