--- a/Group_C_D&D - character creation_leveling.html
+++ b/Group_C_D&D - character creation_leveling.html
@@ -14,7 +14,7 @@
 
 
     DATE			USER				DESCRIPTION OF CHANGE
-    4/24/2020    William Cook			Initial implementation
+    4/30/2020    William Cook			Initial implementation
 ============================================================================
 ======================================================================== -->
 
@@ -92,72 +92,64 @@
     <section class="main-section paddind" id="Intro">
         <!--main-section-start-->
         <div class="container">
-            <h2>Ability Scores and such</h2><br />
-            <h6>Here's a breakdown on Ability Scores, Modifiers, and Proficiencies</h6>
+            <h2>Leveling</h2><br />
+            <h6>Here's an introduction on leveling your character</h6>
         </div>
     </section>
     <!-- ============================================================================================================================== -->
-    <!-- ===================================================== Ability Scores ========================================================= -->
+    <!-- ================================================ Starting above first level =================================================== -->
     <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Ability Scores">
+    <section class="main-section" id="Starting above first level">
 
         <!--main-section-start-->
         <div class="container">
-            <h2>Ability Scores</h2>
-            <h6>Here's a breakdown of the ability scores</h6>
+            <h2>Starting above first level</h2>
+            <h6>Sometimes you'll begin your adventure at a higher level</h6>
 
-            <center>
-                <p><b>This table shows what the ability scores do</b></p>
-            </center>
-            <br>
-            <br>
 
             <!--image-->
-            <figure class="col-lg-4 col-sm-6 col-lg-push-1 text-right wow fadeInUp delay-02s">
-                <br />
-                <br />
-                <br />
-                <img src="img/ability scores table.jpg" alt="ability scores Image">
+            <figure class="col-lg-3 col-sm-3 col-lg-push-1 text-right wow fadeInUp delay-02s">
+                <img src="img/P8X7Ike.jpg" alt="above first level Image">
             </figure>
 
             <!--Fadein-->
             <div class="col-lg-4 col-sm-2 col-lg-push-1 wow fadeInLeft delay-05s">
-                <!--Determining your scores-->
+                <!--Joining an existing group-->
                 <div class="service-list">
                     <div class="service-list-col1">
                     </div>
                     <i></i>
                     <div class="service-list-col3">
-                        <h3><b>Determining your scores</b></h3>
+                        <br />
+                        <h3><b>Joining an existing group</b></h3>
                         <p>
-                            When building your character, you'll have to
-                            determine your scores before you assign them.
-                            Traditionally you'll roll 4d6 and discard the
-                            lowest die six times and assign the scores as
-                            you prefer. There's also other methods like
-                            point buy or assigning predetermined scores
-                            depending on what your playgroup prefers.
+                            More often than not, you'll be introduced
+                            to D&D through someone who has been playing
+                            a campaign that invites you to join. When you
+                            join an existing game, you'll often start at a
+                            similar level to everyone else as to not fall
+                            behind everyone out of the gate and to have difficulty
+                            with the encounters that they'll be facing. It's
+                            more enjoyable for you and your friends if your
+                            character has the same impact as everyone else in battle.
                         </p>
                     </div>
                 </div>
-                <!--Assigning your scores...-->
+                <!--From a roleplaying perspective-->
                 <div class="service-list">
                     <div class="service-list-col1">
                     </div>
                     <i></i>
                     <div class="service-list-col4">
-                        <h3><b>Assigning your scores</b></h3>
+                        <h3><b>From a roleplaying perspective</b></h3>
                         <p>
-                            Once you have your six scores calculated
-                            you'll need to decide where you want to
-                            put them. Each class relies on different
-                            skills to be successful. Your character
-                            might want more strength or dexterity
-                            for their physical attacks or more
-                            intelligence, charisma, or wisdom for their
-                            magical attacks,or even more constitution
-                            to take more damage themselves.
-
+                            While writing your backstory, if your character
+                            does get to start above first level, it's assumed
+                            that they've done some adventuring prior to joining
+                            their party. You should consider this in your backstory
+                            when you're telling everyone about the previous events
+                            you experienced before you encountered them. Try to think
+                            of some monsters you may have slain or feats you may
                         </p>
                     </div>
                 </div>
@@ -168,118 +160,69 @@
 
     </section><!--main-section-end-->
     <!-- ============================================================================================================================== -->
-    <!-- ======================================================= Modifiers ============================================================ -->
+    <!-- ===================================================== How to level ============================================================ -->
     <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Modifiers">
+    <section class="main-section" id="How to level">
         <!--main-section-start-->
         <div class="container">
-            <h2>Modifiers</h2>
-            <h6>More information on modifiers</h6>
+            <h2>How to level</h2>
+            <h6>Some information on leveling your character</h6>
 
             <div class="row">
                 <!--Fadein-->
-                <div class="col-lg-7 col-sm-6 col-lg-push-1 wow fadeInRight delay-05s">
+                <div class="col-lg-6 col-sm-6 wow fadeInRight delay-05s">
                     <div class="service-list">
-                        <!--What they are-->
+                        <!--For each level-->
                         <div class="service-list-col1">
                         </div>
                         <i></i>
                         <div class="service-list-col3">
-                            <br>
-                            <br>
-                            <h3><b>What they are</b></h3>
+                            <h3><b>For each level</b></h3>
                             <p>
-                                Modifiers are derivied from ability scores.
-                                They are a representation of how that
-                                character performs with that particular ability
-                                with a modifier of 0 being the normal average.
-                                You can consult the table to help you find
-                                the modifiers for each skill of your character.
+                                Each time your character levels, they'll
+                                earn additional hitpoints by rolling their hit die
+                                and adding their consitution modifier. They'll also
+                                gain addional features based on their class including
+                                abilities, upgrades to their class like spell slots, an
+                                adjustment to their proficiency bonus, and every
+                                fourth level they gain two additional points to
+                                assign to their ability scores.
                             </p>
                         </div>
                     </div>
                     <br>
                     <br>
-                    <!--What they do-->
+                    <!--Follow the chart-->
                     <div class="service-list">
                         <div class="service-list-col1">
                         </div>
                         <i></i>
                         <div class="service-list-col4">
-                            <h3><b>What they do</b></h3>
+                            <h3><b>Follow the chart</b></h3>
                             <p>
-                                Each of your character's skills are affected
-                                by the modifier attributed to them.
-                                Your modifiers are also used to help with your character's
-                                saves. Additionally, modifiers are used for attacks
-                                both physical and magical to help them hit or do damage.
+                                Each class has a chart like the one pictured in the
+                                player's handbook to help walk you through the advancement
+                                of your class. The chart keeps things easy to follow based
+                                on your character level what your proficiency bonus should be,
+                                what features you have unlocked, and how many spell slots you
+                                have/how strong your class ability is. Just make sure you 
+                                follow your class chart and go through each level individually!
                             </p>
                         </div>
                     </div>
                 </div>
                 <!--image-->
-                <figure class="col-lg-3 col-sm-3  text-right wow fadeInUp delay-02s">
-                    <img src="img/modifier table.jpg" alt="modifier Image">
+                <figure class="col-lg-6 col-sm-3  col-lg-push-1 text-right wow fadeInUp delay-02s">
+                    <br />
+                    <img src="img/sorcerer table.jpg" alt="sorcerer table Image">
                 </figure>
             </div>
         </div>
     </section><!--main-section-End-->
     <!-- ============================================================================================================================== -->
-    <!-- ===================================================== Proficiencies ========================================================== -->
-    <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Proficiencies">
-
-        <!--main-section-start-->
-        <div class="container">
-            <h2>Proficiencies</h2>
-            <h6>Here's a breakdown of proficiencies</h6>
-
-            <div align="center" class="row">
-                <!--Fadein-->
-                <div class="wow fadeInLeft delay-05s">
-                    <!--Proficiency bonus-->
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                        </div>
-                        <i></i>
-                        <div class="service-list-col3">
-                            <h3><b>Proficiency Bonus</b></h3>
-                            <p>
-                                The proficiency bonus represents your 
-                                character's experience and is determined
-                                by your character's level. Your proficiency
-                                bonus is added to skills, saves, and attacks
-                                that your character is proficient in.
-                            </p>
-                        </div>
-                    </div>
-                    <!--Determining Proficiency-->
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                        </div>
-                        <i></i>
-                        <div class="service-list-col4">
-                            <h3><b>Determining Proficiency</b></h3>
-                            <p>
-                                While your proficiency bonus is determined
-                                by level, what your character is proficient 
-                                in is determined by your class. Your class
-                                will tell you what saves, skills, and attacks
-                                that your character is proficient in and 
-                                you'll add your bonus to them.
-                            </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-    </section><!--main-section-end-->
-    <!-- ============================================================================================================================== -->
     <!-- ============================================================ Back to link ==================================================== -->
     <!-- ============================================================================================================================== -->
-    <section class="main-section" id="back to">
+    <section class="main-section" id="Back to link">
 
         <!--main-section-start-->
         <div class="container">
