--- a/Group_C_D&D - charactercreation.html
+++ b/Group_C_D&D - charactercreation.html
@@ -700,7 +700,9 @@
                 </div>
                 <!--image-->
                 <figure class="col-lg-4 col-sm-4  text-right wow fadeInUp delay-02s">
-                    <img src="img/powering up.jpg" alt="leveling Image">
+                    <a href="Group_C_D&D - character creation_leveling.html">
+                        <img src="img/powering up.jpg" alt="leveling Image">
+                    </a>
                 </figure>
             </div>
 
@@ -717,7 +719,9 @@
 
             <!--image-->
             <figure class="col-lg-2 col-lg-push-2 col-sm-6  text-right wow fadeInUp delay-02s">
-                <img src="img/character sheets.jpg" alt="character sheet Image">
+                <a href="Group_C_D&D - character creation_charactersheets.html">
+                    <img src="img/character sheets.jpg" alt="character sheet Image">
+                </a>
             </figure>
 
             <div align="center" class="row">
@@ -794,27 +798,33 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <!-- <img src=".\img\Creator.jpg" alt="Pantheon"> -->
-                            <img src=".\img\barb sheet.jpg" alt="Character 1">
-                            <div class="carousel-caption">
-                                <h4 text="bold">Character 1</h4>
-                                <p>Half Orc Barbarian</p>
-                            </div>
+                            <a href="img/barb sheet.jpg">
+                                <img src=".\img\barb sheet.jpg" alt="Character 1">
+                                <div class="carousel-caption">
+                                    <h4 text="bold">Character 1</h4>
+                                    <p>Half Orc Barbarian</p>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="item">
-                            <img src=".\img\elf ranger.jpg" alt="Character 2">
-                            <div class="carousel-caption">
-                                <h4>Character 2</h4>
-                                <p>Elf Ranger</p>
-                            </div>
+                            <a href="img/elf ranger.jpg">
+                                <img src=".\img\elf ranger.jpg" alt="Character 2">
+                                <div class="carousel-caption">
+                                    <h4>Character 2</h4>
+                                    <p>Elf Ranger</p>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="item">
-                            <img src=".\img\human sorcerer.jpg" alt="Character 3">
-                            <div class="carousel-caption">
-                                <h4>Character 3</h4>
-                                <p>Human Sorcerer</p>
-                            </div>
+                            <a href="img/human sorcerer.jpg">
+                                <img src=".\img\human sorcerer.jpg" alt="Character 3">
+                                <div class="carousel-caption">
+                                    <h4>Character 3</h4>
+                                    <p>Human Sorcerer</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
 
@@ -829,7 +839,11 @@
                     </a>
                 </div>
                 <br>
-                <p>To learn more about the characters we prepared for you, click here.</p>
+                <p>
+                    To learn more about the characters we prepared for you, 
+                    <!--link-->
+                    <a href="Group_C_D&D - character creation_characterexamples.html">click here.</a>
+                </p>
             </center>
     </section>
 
