--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -276,8 +276,7 @@
                     </div>
                 	<div class="service-list-col3">
                         <h3>World building/Coding</h3>
-                        <p>My primary contributions to the project include gathering material to construct the world building page. 
-						Also, I've collaborated with Bill and together we tackled the encounter building page.</p>
+                        <p>My primary contributions to the project include gathering material to construct the world building page. </p>
                     </div>
                 </div>
 			</div>
