--- a/Group_C_D&D - character creation_characterexamples.html
+++ b/Group_C_D&D - character creation_characterexamples.html
@@ -75,7 +75,7 @@
         <div class="container">
             <ul class="main-nav">
                 <a class="small-logo">
-                    <a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
+                    <a href="Group_C_D&D.html"><img src="img/menu2.jpg" alt=""></a>
                     <li><a href="#Menu">Menu</a></li>
                     <li><a href="Group_C_D&D.html">Home</a></li>
                     <li><a href="Group_C_D&D - charactercreation.html">Character Building</a></li>
